syntax = "proto3";

package org.apache.jackrabbit.oak.remote;

option java_package = "org.apache.jackrabbit.oak.remote.proto";
option java_outer_classname = "NodeBuilderChangeProtos";

import "node_builder.proto";
import "node_state.proto";
import "node_value.proto";

message NodeBuilderChangeList {
    repeated NodeBuilderChange change = 1;
}

message NodeBuilderChange {
    NodeBuilderPath nodeBuilderPath = 1;
    oneof Change {
        SetProperty setProperty = 2;
        RemoveProperty removeProperty = 3;
        AddChildNode addNode = 4;
        RemoveNode removeNode = 5;
        SetChildNode setChildNode = 6;
    }
}

message SetProperty {
    Property property = 1;
}

message RemoveProperty {
    string name = 1;
}

message AddChildNode {
    string childName = 1;
}

message RemoveNode {
}

message SetChildNode {
    string childName = 1;
    NodeStateId nodeStateId = 2;
}
